starting advantages section

--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,90 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pulse</title>
 
     <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
+
+    <div class="promo">
+        <div class="container">
+            <header class="header">
+                <a href="#" class="header__logo">
+                    <img src="icons/logo.png" alt="logo">
+                </a>
+                <div class="header__official">
+                    Оффициальный представитель
+                    <span>Garmin, Polar, Suunto</span>
+                </div>
+                <div class="header__contacts">
+                    <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
+                    <button class="button">Заказать звонок</button>
+                </div>
+            </header>   
+            
+            <div class="promo__wrapper">
+                <h1 class="promo__header">Подбор пульсометра</h1>
+                <h2 class="promo__subheader">с учётом Вашего уровня подготовки</h2>
+
+                <div class="promo__icons">
+                    <div class="promo__icon">
+                        <img src="icons/timer.png" alt="timer">
+                        Время подбора:
+                        10 минут
+                    </div>
+                    <div class="promo__icon">
+                        <img src="icons/cart.png" alt="cart">
+                        Бесплатная
+                        доставка
+                    </div>
+                    <div class="promo__icon">
+                        <img src="icons/messages.png" alt="messages">
+                        Ответим
+                        на все вопросы
+                    </div>
+                </div>
+
+                <button class="button button_main">Заказать консультацию</button>
+                <div class="promo__link">
+                    или
+                    <a href="#">перейти в каталог</a>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <div class="advantages">
+        <div class="container">
+            <div class="advantages__wrapper">
+                <h2 class="advantages__header"></h2>
+                <div class="advantages__advantage">
+                    <img src="icons/cup.png" alt="cup">
+                    <div class="advantages__title">Делимся опытом</div>
+                    <div class="advantages__subtitle">Наши сотрудники всегда готовы
+                         поделиться своим опытом, так как сами бегают полумарафоны,
+                          переплыли Босфор, готовятся к соревнованиям по 
+                          триатлону!</div>
+                </div>
+                <div class="advantages__advantage">
+                    <img src="icons/heart.png" alt="heart">
+                    <div class="advantages__title">Заботимся о здоровье</div>
+                    <div class="advantages__subtitle">Мы работаем для того, 
+                        чтобы Ваши занятия спортом шли на пользу Вашему здоровью
+                         и были в радость Вам и Вашим близким!</div>
+                </div>
+                <div class="advantages__advantage">
+                    <img src="icons/shoe.png" alt="shoe">
+                    <div class="advantages__title">Учим бегать</div>
+                    <div class="advantages__subtitle">Помогаем с обучением 
+                        правильной технике бега! Дружим с крупнейшей школой 
+                        бега в России - I LOVE RUNNING.</div>
+                </div>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
