--- a/src/index.html
+++ b/src/index.html
@@ -61,8 +61,8 @@
     </div>
     <div class="advantages">
         <div class="container">
+            <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
             <div class="advantages__wrapper">
-                <h2 class="advantages__header"></h2>
                 <div class="advantages__advantage">
                     <img src="icons/cup.png" alt="cup">
                     <div class="advantages__title">Делимся опытом</div>
@@ -83,11 +83,29 @@
                     <div class="advantages__title">Учим бегать</div>
                     <div class="advantages__subtitle">Помогаем с обучением 
                         правильной технике бега! Дружим с крупнейшей школой 
-                        бега в России - I LOVE RUNNING.</div>
+                        бега в России - 
+                        <a href="#">I LOVE RUNNING.</a>
+                        </div>
                 </div>
             </div>
         </div>
     </div>
-    
+    <div class="consultation">
+        <div class="container">
+            <h2 class="title title_left">Получите бесплатную консультацию<br>
+                по подбору пульсометра </h2>
+                <div class="consultation__descr">
+                    Просто заполните форму заявки <br>
+                    и мы перезвоним вам в течении 10 минут
+                </div>
+                <form class="feed-form" action="#">
+                    <input name="name" required type="text" placeholder="Ваше имя">
+                    <input name="phone" required type="number" placeholder="Ваш телефон">
+                    <input name="email" required type="email" placeholder="Ваш E-mail">
+                    <button class="button button_submit">Заказать консультацию</button>
+                </form>
+
+        </div>
+    </div>
 </body>
 </html>
