--- a/src/index.html
+++ b/src/index.html
@@ -101,7 +101,7 @@
                 </div>
                 <form id="consultation-form" class="feed-form" action="#">
                     <input name="name" type="text" placeholder="Ваше имя">
-                    <input name="phone" type="number" placeholder="Ваш телефон">
+                    <input name="phone" placeholder="Ваш телефон">
                     <input name="email" type="email" placeholder="Ваш E-mail">
                     <button class="button button_submit">Заказать консультацию</button>
                 </form>
@@ -407,7 +407,7 @@
             <div class="modal__subtitle">и мы перезвоним вам в течении 10 минут</div>
             <form class="feed-form feed-form_mt25" action="#">
                 <input name="name" type="text" placeholder="Ваше имя">
-                <input name="phone" type="number" placeholder="Ваш телефон">
+                <input name="phone"  placeholder="Ваш телефон">
                 <input name="email" type="email" placeholder="Ваш E-mail">
                 <button class="button button_submit">Заказать консультацию</button>
             </form>
@@ -418,9 +418,9 @@
             <div class="modal__title">Ваш заказ:</div>
             <div class="modal__subtitle">Пульсометр Polar FT1</div>
             <form class="feed-form feed-form_mt25" action="#">
-                <input name="name" required type="text" placeholder="Ваше имя">
-                <input name="phone" required type="number" placeholder="Ваш телефон">
-                <input name="email" required type="email" placeholder="Ваш E-mail">
+                <input name="name" type="text" placeholder="Ваше имя">
+                <input name="phone" placeholder="Ваш телефон">
+                <input name="email" type="email" placeholder="Ваш E-mail">
                 <button class="button button_submit">Купить</button>
             </form>
         </div>
@@ -437,6 +437,7 @@
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.maskedinput.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
